# syspare-rag-py

./: .env.example  .gitattributes  .gitignore  README.md  main.py  new_pipeline.py  pipeline.py  pyproject.toml  rag_server.py  render.yaml  requirements-render.txt  requirements.txt  s3_storage.py  test.ipynb  utils.py
cache/: image_metadata_df.csv  image_metadata_df.pkl  text_metadata_df.csv
cache/images/ym358a/page_048/: page_048_img_01_crop_01.png.D59Aaf89
cache_ym358a/: image_metadata_df.csv  image_metadata_df.pkl  text_metadata_df.csv  text_metadata_df.pkl
rag-viewer-tsx/: .env.example  README.md  index.html  package.json  tailwind.config.js
rag-viewer-tsx/src/: RagViewer.tsx  index.css  main.tsx  vite-env.d.ts
templates/: app.html  index.html  rag-app.js  rag-app.ts  tsconfig.json  v1.html
testing/: package-lock.json  package.json
testing/lib/: types.ts
testing/src/: index.ts
