[project]
name = "multi-rag-syspare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.131.0",
    "fitz>=0.0.1.dev2",
    "google-cloud-aiplatform>=1.71.1",
    "ipython>=9.10.0",
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "uvicorn>=0.41.0",
    "vertexai>=1.71.1",
]
