[project]
name = "multi-rag-syspare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "colorama>=0.4.6",
    "fastapi>=0.131.0",
    "google-cloud-aiplatform>=1.71.1",
    "ipython>=9.10.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-google-vertexai>=2.0.9",
    "nltk>=3.9.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "rich>=14.3.3",
    "unstructured[local-inference]>=0.21.2",
    "uvicorn>=0.41.0",
    "vertexai>=1.71.1",
]
